Add Collection Manager View

--- a/Development/Dev Log/2022-04-22 Dev Log.md
+++ b/Development/Dev Log/2022-04-22 Dev Log.md
@@ -1,4 +1,4 @@
-## Objectives:
+## Objectives
 - Setup a new Obsidian plugin project
 - Acid test the plugin (ensure the code builds and the plugin works in Obsidian)
 - Commit the source code baseline to GitHub
