--- a/Development/Dev Log/2022-04-23 Dev Log.md
+++ b/Development/Dev Log/2022-04-23 Dev Log.md
@@ -1,4 +1,4 @@
-## Objectives:
+## Objectives
 - Complete the [Creating an editor](https://unifiedjs.com/learn/guide/create-an-editor/) tutorial in the Unified Learning Guide.
 
 ## Conversion, Assembly and the Unfied Collective
