Add and integrate React

--- a/Development/Dev Log/2022-04-28 Dev Log.md
+++ b/Development/Dev Log/2022-04-28 Dev Log.md
@@ -104,3 +104,73 @@ It works, so I'm commiting this stable checkpoint to GitHub with the mesage **"A
 
 ![[Pasted image 20220428130813.png]]
 
+## Install React
+
+```bash
+npm install react react-dom
+```
+
+Add type definitions...
+
+```bash
+npm install --save-dev @types/react @types/react-dom
+```
+
+In `tsconfig.json`, enable JSX support on the `compilerOptions` object:
+    
+**tsconfig.json**
+    
+```json
+{
+	"compilerOptions": {    "jsx": "react"  }
+}
+```
+
+## Create a React component
+
+Create a new file called `ReactView.tsx` in the plugin root directory, with the following content:
+
+**ReactView.tsx**
+
+```
+import * as React from "react";
+export const ReactView = () => {  return <h4>Hello, React!</h4>;};
+```
+
+## Mount the React component
+
+**CollectionManagerView.tsx**
+
+Note that now we've had to rename the view extension to tsx.
+
+```ts
+import * as React from "react";
+import * as ReactDOM from "react-dom";
+import { ReactView } from "./ReactView";
+
+//...
+
+  async onOpen() {
+    ReactDOM.render(
+      <ReactView />,
+      this.containerEl.children[1]
+    );
+  }
+
+//...
+
+  async onClose() {
+    ReactDOM.unmountComponentAtNode(this.containerEl.children[1]);
+  }
+
+//...
+
+
+```
+
+Looks good!
+
+![[Pasted image 20220428132643.png]]
+
+Well, actually, it looks pretty freagin' boring, but it proves the React is working, so now we'll commit the stable checkpoint with message: **"Add and integrate React"**
+
