--- a/Development/Dev Log/2022-04-28 Dev Log.md
+++ b/Development/Dev Log/2022-04-28 Dev Log.md
@@ -1,4 +1,4 @@
-## Objectives
+	## Objectives
 I'm pretty sure now that I want to use react for a UI Library, so today, I'm setting up the plugin to use React and then just doing a simple acid test to make sure that it's set up properly.
 
 I'm going by the advanced guide from Marcus Olsson's Obsidian [React](https://marcus.se.net/obsidian-plugin-docs/advanced-guides/react) plugin developer docs. This document assumes we have a custom view to begin with. As we've only started with the Obsidian Sample Plugin, we do not yet have a custom view, so we'll start there.
@@ -174,3 +174,13 @@ Looks good!
 
 Well, actually, it looks pretty freagin' boring, but it proves the React is working, so now we'll commit the stable checkpoint with message: **"Add and integrate React"**
 
+For more information on `ReactDOM.render()` and `ReactDOM.unmountComponentAtNode()`, refer to the documentation on [ReactDOM](https://reactjs.org/docs/react-dom.html).
+
+You can mount your React component on any `HTMLElement`, for example [status bar items](https://marcus.se.net/obsidian-plugin-docs/guides/status-bar). Just make sure to clean up properly by calling `ReactDOM.unmountComponentAtNode()` when you're done.
+
+I'm going to go ahead and do this next step because, it sounds like it's good to learn, even if not necessary in the short term...
+
+## Create an App context
+Source: [Create an App context](https://marcus.se.net/obsidian-plugin-docs/advanced-guides/react#create-an-app-context)
+
+I am not yet going to use this part because it only works for functional components anyway and not classes. I'm not sure I know enough about using functional components versus classes yet, so I can just come back to this later if needed.
