--- a/Development/Dev Log/2022-05-03 Dev Log.md
+++ b/Development/Dev Log/2022-05-03 Dev Log.md
@@ -40,3 +40,5 @@ This renders the following...
 
 ...which sort of corresponds to what is, right now, also coming out from the LitMojo plugin in Obsidian...
 
+Note: I renamed `sandbox` to `.sandbox` so that the directory is not visible in Obsidian when using the vault (I like to keep them together though, so that it all goes into the same repo in GitHub; it all goes together).
+
