--- a/Development/Dev Log/2022-05-05 Dev Log.md
+++ b/Development/Dev Log/2022-05-05 Dev Log.md
@@ -12,3 +12,25 @@ I did some more fiddling with the react-arborist tree control and realized that,
 
 I'm pivoting, so, I have deleting the `.sandbox` directory inside the vault; just through Windows File Explorer.
 
+## Uninstall React
+
+Basically, just reversing what I did before...
+
+- Remove from `package.json` file:
+	- `react`
+	- `react-dom`
+	- `@types/react`
+	- `@types/react-dom`
+- Delete the `node_modules` directory
+- Remove from the `compilerOptions` object in `tsconfig.json`...
+```json
+{
+	"compilerOptions": {    "jsx": "react"  }
+}
+```
+- Run `npm install`
+- Update `CollectionManagerView.tsx` (back to the starting point without React)
+- Delete ReactView.tsx
+- Rename `CollectionManagerView.tsx` to `collection-manager-view.ts`
+- Run a visual test (i.e. `npm run dev` and check the plugin view in Obsidian)
+- Commit changes.
