Add StencilJS component starter, 'glass-web-components'.

--- a/Development/Dev Log/2022-05-05 Dev Log.md
+++ b/Development/Dev Log/2022-05-05 Dev Log.md
@@ -34,3 +34,25 @@ Basically, just reversing what I did before...
 - Rename `CollectionManagerView.tsx` to `collection-manager-view.ts`
 - Run a visual test (i.e. `npm run dev` and check the plugin view in Obsidian)
 - Commit changes.
+
+## Create a Stencil Project in the Repo
+
+See: [Getting Started](https://stenciljs.com/docs/getting-started)](https://stenciljs.com/docs/getting-started), stenciljs.com
+
+`npm init stencil`
+
+Choose the component starter
+
+Project name: `glass-web-components`
+
+```
+cd glass-web-components
+npm i
+npm start
+```
+
+Works...
+
+![[Pasted image 20220505093932.png]]
+
+**Commit:** git commit -m "Add StencilJS component starter, 'glass-web-components'."
