Create `glass-tree` starting point

--- a/Development/Dev Log/2022-05-05 Dev Log.md
+++ b/Development/Dev Log/2022-05-05 Dev Log.md
@@ -56,3 +56,40 @@ Works...
 ![[Pasted image 20220505093932.png]]
 
 **Commit:** git commit -m "Add StencilJS component starter, 'glass-web-components'."
+
+## Create a component
+
+In glass-web-components/src/components/tree
+
+```ts
+import { Component, Prop, h } from '@stencil/core';
+
+// Some details element styling tips
+// https://stackoverflow.com/questions/10813581/can-i-replace-the-expand-icon-of-the-details-element
+
+
+@Component({
+  tag: 'glass-tree',
+})
+export class Tree {
+
+  // Indicate that name should be a public property on the component
+  @Prop() name: string;
+
+  render() {
+    return (
+      <p>
+        My name is {this.name}
+      </p>
+    );
+  }
+}
+```
+
+I updated the index page to include the new component and voila...
+
+![[Pasted image 20220505100214.png]]
+
+Stupid simple, I know. It's just step one.
+
+Commit: Create `glass-tree` starting point
