Move tree.css code to tree-node.css

--- a/Development/Dev Log/2022-05-05 Dev Log.md
+++ b/Development/Dev Log/2022-05-05 Dev Log.md
@@ -1,5 +1,3 @@
-# 2022-05-05
-
 ## Objectives
 
 Start a Stencil.js project to start developing web components of my own and nevermind React. I've changed my mind. And that means pulling the react integration out of the plugin code base as it is now (rolling back).
@@ -92,4 +90,4 @@ I updated the index page to include the new component and voila...
 
 Stupid simple, I know. It's just step one.
 
-Commit: Create `glass-tree` starting point
+**Commit: Create `glass-tree` starting point**
